
plugins {
    id "io.freefair.lombok" version "8.10.2"
    id 'java'
    id "maven-publish"
    id "org.sonarqube" version "7.2.3.7755"
    id "org.jreleaser" version "1.23.0"
}

group = 'com.neaeraconsulting'
version = '2.1.0-SNAPSHOT'



repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.16'

    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'commons-io:commons-io:2.20.0'
}

def linuxArtifactPath = "$project.rootDir/lib/libasnapplication.so"
def windowsArtifactPath = "$project.rootDir/lib/asnapplication.dll"

publishing {

    publications {
        maven(MavenPublication) {
            groupId = group
            artifactId = project.name
            from components.java
            artifact(linuxArtifactPath) {
                classifier = 'linux-x86_64'
                extension = 'so'
            }
            artifact(windowsArtifactPath) {
                classifier = 'windows-x86_64'
                extension = 'dll'
            }
            pom {
                name = project.name
                description = 'J2735 codec in C with Java interface via the Java Foreign Function and Memory API'
                url = 'https://github.com/neaeraconsulting/j2735-ffm-java'
                inceptionYear = '2025'
                licenses {
                    license {
                        name = 'Apache 2.0 License'
                        url = 'https://www.apache.org/licenses/LICENSE-2.0.html'
                    }
                }
                developers {
                    developer {
                        id = 'iyourshaw'
                        name = 'Ivan Yourshaw'
                        email = '39739503+iyourshaw@users.noreply.github.com'
                        organization = 'Neaera Consulting'
                        organizationUrl = 'https://neaeraconsulting.com/'
                    }
                }
                contributors {
                    contributor {
                        name = 'Michael English'
                    }
                }
                scm {
                    connection = 'scm:git:https://github.com/neaeraconsulting/j2735-ffm-java'
                    developerConnection = 'scm:git:https://github.com/neaeraconsulting/j2735-ffm-java'
                    url = 'https://github.com/neaeraconsulting/j2735-ffm-java'
                }
            }
        }
    }

    repositories {
        maven {
            url = layout.buildDirectory.dir('staging-deploy')
        }
    }
}

jreleaser {
    release {
        github {
            // Release to Maven Central only, don't write to github
            skipRelease = true
        }
    }
    gitRootSearch = true
    signing {
        pgp {
            active = 'ALWAYS'
            armored = true
        }
    }
    deploy {
        maven {
            mavenCentral {
                'release-deploy' {
                    active = 'RELEASE'
                    url = 'https://central.sonatype.com/api/v1/publisher'
                    stagingRepository('build/staging-deploy')
                }
            }
            nexus2 {
                'snapshot-deploy' {
                    active = 'SNAPSHOT'
                    snapshotUrl = 'https://central.sonatype.com/repository/maven-snapshots/'
                    applyMavenCentralRules = true
                    snapshotSupported = true
                    closeRepository = true
                    releaseRepository = true
                    stagingRepository('build/staging-deploy')
                }
            }
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
    withSourcesJar()
    withJavadocJar()
}

test {
    jvmArgs(["--enable-native-access=ALL-UNNAMED"])
    systemProperty("jextract.trace.downcalls", "true")
    useJUnitPlatform()
    testLogging.showStandardStreams = true
}

sonar {
    properties {
        // test
        property "sonar.projectKey", "neaeraconsulting_j2735-ffm-java"
        property "sonar.organization", "neaeraconsulting"
    }
}

tasks.register('getVersion') {
    doLast { println(project.version) }
}

